add details